# Tempered

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Justfile  rust-analyzer.toml
.cargo/: config.toml
.github/workflows/: prod.yml
auth/: Cargo.toml
auth-service/: Cargo.toml  Dockerfile
auth-service-workspace/: COMPLETION_STATUS.md  Cargo.toml  REFACTORING_STATUS.md
auth-service-workspace/auth-adapters/src/auth/: jwt.rs  mod.rs
auth-service-workspace/auth-adapters/src/config/: constants.rs  settings.rs
auth-service-workspace/auth-adapters/src/email/: mod.rs  postmark_email_client.rs
auth-service-workspace/auth-adapters/src/http/routes/: change_password.rs  delete_account.rs  elevate.rs  error.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
auth-service-workspace/auth-adapters/src/persistence/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service-workspace/auth-application/: Cargo.toml
auth-service-workspace/auth-application/src/: lib.rs
auth-service-workspace/auth-application/src/use_cases/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs
auth-service-workspace/auth-core/src/domain/: mod.rs
auth-service-workspace/auth-core/src/ports/: repositories.rs
auth-service-workspace/auth-service-bin/: Cargo.toml
auth-service-workspace/auth-service-bin/src/: main.rs  main_old.rs
auth-service-workspace/auth-service-bin/tests/: container_test.rs
auth-service-workspace/auth-service-bin/tests/api/: helpers.rs
auth-service-workspace/auth-service-bin/tests/api/user_api/: change_password.rs  login.rs  logout.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
auth-service-workspace/auth-service-lib/: ARCHITECTURE.md  Cargo.toml
auth-service-workspace/auth-service-lib/src/: auth_service.rs  helpers.rs  lib.rs  tracing.rs
auth-service/src/: main.rs
auth/auth/: Cargo.toml
auth/auth-adapters/: Cargo.toml
auth/auth-adapters/src/auth/: jwt.rs
auth/auth-adapters/src/email/: mock_email_client.rs  postmark_email_client.rs
auth/auth-adapters/src/http/routes/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
auth/auth-adapters/src/persistence/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth/auth-application/: Cargo.toml
auth/auth-application/src/use_cases/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs
auth/auth-core/: Cargo.toml
auth/auth-core/src/: lib.rs
auth/auth-core/src/ports/: services.rs
auth/auth-service-lib/: Cargo.toml  README.md
auth/auth-service-lib/src/: auth_service.rs  helpers.rs  lib.rs
auth/auth-service-lib/tests/api/: helpers.rs
auth/auth-service-lib/tests/api/user_api/: delete_account.rs  login.rs  signup.rs  verify_2fa.rs
auth/auth/src/: lib.rs
examples/: compose.yml  standalone.rs
src/: lib.rs
src/tempered_adapters/: Cargo.toml
src/tempered_adapters/src/: lib.rs
src/tempered_adapters/src/auth/: jwt.rs
src/tempered_adapters/src/auth_validation/: local_jwt_validator.rs  mod.rs
src/tempered_adapters/src/authentication/: jwt_authenticator.rs  jwt_scheme.rs  mod.rs
src/tempered_adapters/src/config/: mod.rs  settings.rs
src/tempered_adapters/src/email/: mock_email_client.rs  postmark_email_client.rs
src/tempered_adapters/src/handlers/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
src/tempered_adapters/src/http/: http_abstraction.rs  http_authentication_scheme.rs  mod.rs
src/tempered_adapters/src/http/routes/: change_password.rs  delete_account.rs  elevate.rs  error.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
src/tempered_adapters/src/persistence/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
src/tempered_application/: Cargo.toml
src/tempered_application/src/use_cases/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs
src/tempered_auth_service/: Cargo.toml
src/tempered_auth_service/src/: auth_service.rs  helpers.rs  lib.rs
src/tempered_auth_service/tests/api/: helpers.rs
src/tempered_auth_service/tests/api/user_api/: change_password.rs  delete_account.rs  login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
src/tempered_axum/: Cargo.toml
src/tempered_axum/src/: adapters.rs  lib.rs
src/tempered_axum/src/routes/: change_password.rs  delete_account.rs  elevate.rs  login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_elevated_token.rs  verify_token.rs
src/tempered_core/: Cargo.toml
src/tempered_core/src/: http_abstraction.rs  http_authentication_scheme.rs  lib.rs
src/tempered_core/src/ports/: repositories.rs
src/tempered_core/src/strategies/: auth_validator.rs  authenticator.rs  mod.rs
