
[package]
name = "tempered"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates - re-export all public APIs
tempered_core.workspace = true
tempered_application.workspace = true
tempered_adapters.workspace = true
tempered_auth_service.workspace = true

# Re-export key dependencies that are part of the public API
async-trait.workspace = true
secrecy.workspace = true
axum.workspace = true
tokio.workspace = true
http.workspace = true


[dev-dependencies]
redis.workspace = true
reqwest.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true


[workspace]
resolver = "2"
members = [
    "src/tempered_core",
    "src/tempered_application",
    "src/tempered_adapters",
    "src/tempered_axum",
    "src/tempered_auth_service",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
tempered_core = { path = "src/tempered_core" }
tempered_application = { path = "src/tempered_application" }
tempered_adapters = { path = "src/tempered_adapters" }
tempered_axum = { path = "src/tempered_axum" }
tempered_auth_service = { path = "src/tempered_auth_service" }

# Web framework
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "tower"] }
http = "*"

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
redis = { version = "1.0.1", features = ["tokio-comp"] }

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = "0.4"
rand = "0.9.2"
regex = "1.12"
thiserror = "2.0"
secrecy = { version = "0.8", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }
arc-swap = { version = "1.7", features = ["serde"] }

# Authentication & Security
jsonwebtoken = { version = "10.2", default-features = false, features = [
    "rust_crypto",
] }
argon2 = { version = "0.5.3", features = ["std"] }

# Configuration
config = { version = "0.15.19", features = ["json"] }
dotenvy = "0.15.7"

# Observability
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
tracing-error = "0.2.1"
color-eyre = "0.6.5"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }

# Templates
askama = "0.14"

# Testing dependencies
testcontainers-modules = { version = "0.14", features = [
    "postgres",
    "blocking",
    "redis",
] }
libtest-mimic = "0.8"
libtest-mimic-collect = "0.3"
rustest = "0.3"
wiremock = "0.6"
fake = "4.4"
quickcheck = "1.0"
quickcheck_macros = "1.1"
