[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async
tokio = "1.48.0"

# Database
sqlx = "0.8.6"
redis = "1.0.1"

# Configuration
dotenvy = "0.15.7"

# Observability
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tracing-error = "0.2.1"
color-eyre = "0.6.5"

# Utilities
reqwest = "0.12.26"

# Internal crates for testing
auth = { path = "../auth/auth" }
