[package]
name = "auth-application"
version.workspace = true
edition.workspace = true

[dependencies]
# Core domain
auth-core.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Utilities
thiserror.workspace = true

secrecy.workspace = true
uuid.workspace = true
chrono.workspace = true
color-eyre.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
