[package]
name = "auth-core"
version.workspace = true
edition.workspace = true

[dependencies]
# Domain logic - minimal dependencies
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
secrecy.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true
