[package]
name = "auth"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates - re-export all public APIs
auth-core.workspace = true
auth-application.workspace = true
auth-adapters.workspace = true
auth-service-lib.workspace = true

# Re-export key dependencies that are part of the public API
async-trait.workspace = true
secrecy.workspace = true
axum.workspace = true
tokio.workspace = true
